# studio

./: .gitignore  808.html  airwindows-worklet.js  analytics.js  breaks-manifest.json  deck.html  dx7.html  electron-main.js  entitlements.mac.plist  fm.html  hammond.html  index.html  kr106.html  mellotron.html  minimoog.html  mixer.html  mpc.html  package-lock.json  package.json  pedal-fx.js  pedals.html  pianoroll.html  pitch-shifter-processor.js  preload.js  rack.html  rhodes.html  solina.html  strudel.html  studio-bus.js  synth-processor.js  tape.html  tb303.html
bass/: bundle.js
dx7/: dx7-awn.js  dx7-lib.js  index.html  synth.css
native/: CMakeLists.txt
native/src/: au_host.h  au_host.mm  au_node_binding.mm  au_window.h  au_window.mm
rhodes/: download_samples.sh
